; ModuleID = '/home/carl/AnghaBench/linux/sound/firewire/extr_amdtp-stream.c_amdtp_stream_get_max_payload.c'
source_filename = "/home/carl/AnghaBench/linux/sound/firewire/extr_amdtp-stream.c_amdtp_stream_get_max_payload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdtp_stream = type { i32, i32, i32 }

@CIP_JUMBO_PAYLOAD = common dso_local global i32 0, align 4
@CIP_NO_HEADER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @amdtp_stream_get_max_payload(%struct.amdtp_stream* %0) #0 {
  %2 = alloca %struct.amdtp_stream*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.amdtp_stream* %0, %struct.amdtp_stream** %2, align 8
  store i32 1, i32* %3, align 4
  store i32 0, i32* %4, align 4
  %5 = load %struct.amdtp_stream*, %struct.amdtp_stream** %2, align 8
  %6 = getelementptr inbounds %struct.amdtp_stream, %struct.amdtp_stream* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @CIP_JUMBO_PAYLOAD, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 5, i32* %3, align 4
  br label %12

12:                                               ; preds = %11, %1
  %13 = load %struct.amdtp_stream*, %struct.amdtp_stream** %2, align 8
  %14 = getelementptr inbounds %struct.amdtp_stream, %struct.amdtp_stream* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @CIP_NO_HEADER, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %12
  store i32 8, i32* %4, align 4
  br label %20

20:                                               ; preds = %19, %12
  %21 = load i32, i32* %4, align 4
  %22 = zext i32 %21 to i64
  %23 = load %struct.amdtp_stream*, %struct.amdtp_stream** %2, align 8
  %24 = getelementptr inbounds %struct.amdtp_stream, %struct.amdtp_stream* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.amdtp_stream*, %struct.amdtp_stream** %2, align 8
  %27 = getelementptr inbounds %struct.amdtp_stream, %struct.amdtp_stream* %26, i32 0, i32 2
  %28 = load i32, i32* %27, align 4
  %29 = mul nsw i32 %25, %28
  %30 = sext i32 %29 to i64
  %31 = mul i64 %30, 4
  %32 = load i32, i32* %3, align 4
  %33 = zext i32 %32 to i64
  %34 = mul i64 %31, %33
  %35 = add i64 %22, %34
  %36 = trunc i64 %35 to i32
  ret i32 %36
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
